[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Basic/Sounds/Curve.ogg" type="AudioStream" id=1]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Scripts/WagonSound.gd" type="Script" id=2]
[ext_resource path="res://Resources/Basic/Sounds/Drive.ogg" type="AudioStream" id=3]
[ext_resource path="res://Resources/Basic/Sounds/DriveOverSwitch.ogg" type="AudioStream" id=4]

[node name="WagonSound" type="Node3D"]
script = ExtResource( 2 )

[node name="DriveSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_size = 7.0
autoplay = true
bus = "Train"

[node name="CurveSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 1 )
unit_size = 7.0
autoplay = true
bus = "Train"

[node name="SwitchSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_size = 7.0
bus = "Train"

[node name="SwitchSound2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_size = 7.0
bus = "Train"

[node name="BrakeSound" type="AudioStreamPlayer3D" parent="."]
unit_size = 7.0
autoplay = true
bus = "Train"
